--- a/practica4/canvas.html
+++ b/practica4/canvas.html
@@ -22,6 +22,6 @@
                 Sin suporte a canvas
             </canvas>
         </div>
-        <script src="java.js" type="text/javascript" async defer></script>
+        <script src="canvaimage.js" type="text/javascript"  ></script>
     </body>
 </html>
